# telepathy-gabble

./: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure
data/: Makefile.in
debian/: README.source  autoreconf  changelog  control  copyright  gbp.conf  rules  shlibs.local  shlibs.local.in  telepathy-gabble-dbg.links  telepathy-gabble.8.in  telepathy-gabble.install  watch
debian/patches/: 00-no-call-state.diff  0001-Fix-a-crash-when-advertising-tube-caps-without-Servi.patch  0001-Stream-tube-tests-don-t-assume-that-stream-tubes-alw.patch  0001-conn-presence.c-disallow-setting-offline-error-unkn.patch  0001-fd.o-25341-Always-sets-its-own-vcard-on-login.patch  0001-server-tls-manager-deal-with-modification-of-the-GLi.patch  0002-JingleSession-properly-set-actor-when-terminating-t.patch  0002-fd.o-22968-GibberUnixTransport-make-credential-passi.patch  0002-vcard-manager-Do-not-try-to-set-vcard-fields-not-sup.patch  0003-Don-t-advertise-support-for-credentials-passing-on-p.patch  0003-vcard-manager-Iterate-over-hashtable-instead-of-usin.patch  0011-Add-Google-camera-v1-as-a-first-class-caps-bundle.patch  0012-Now-that-camera-v1-has-a-caps-URI-don-t-treat-it-as-.patch  00_only_set_message_if_present.patch  00_retry_media_session_initiation_on_stream_removal.patch  01-jingleinfo.diff  01_first_update_cache_then_use_it.patch  01fixmarshaller.patch  Add-a-systemd-user-service.patch  Fix-for-initiating-a-video-call-from-an-Android-tabl.patch  Make-Android-4.0-GTalk-contacts-appear-as-capable-of.patch  iphb-support-leste-version.patch  openssl-clear-cert-crl-flags.patch  openssl-do-not-limit-tls-to-10.patch  series  use-tls-v12.patch
debian/upstream/: signing-key.asc
docs/: Makefile.in
extensions/: Makefile.in
gabble/: Makefile.in
generate/: Makefile.in
lib/: Makefile.in
lib/ext/: Makefile.in
lib/ext/telepathy-yell/: COPYING  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac
lib/ext/telepathy-yell/m4/: Makefile.am  Makefile.in
lib/ext/telepathy-yell/spec/: Makefile.am  Makefile.in
lib/ext/telepathy-yell/telepathy-yell/: Makefile.am  Makefile.in  all.xml  base-call-channel.c  base-call-channel.h  base-call-content.c  base-call-content.h  base-call-stream.c  base-call-stream.h  base-media-call-content.c  base-media-call-stream.c  base-media-call-stream.h  call-content-codec-offer.c  call-content-codec-offer.h  call-stream-endpoint.c  call-stream-endpoint.h  call.xml  cli-call.h  debug.c  debug.h  enums.h  extensions-cli.c  extensions.h  gtypes.h  interfaces.h  svc-call.h  telepathy-yell-uninstalled.pc.in  telepathy-yell.h  telepathy-yell.pc.in
lib/ext/telepathy-yell/telepathy-yell/_gen/: cli-call.h  enums.h  gtypes.h  interfaces.h  svc-call.h
lib/ext/telepathy-yell/tools/: Makefile.am  Makefile.in  glib-client-marshaller-gen.py
lib/ext/wocky/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure
lib/ext/wocky/docs/: Makefile.in
lib/ext/wocky/docs/reference/: Makefile.in  wocky.types
lib/ext/wocky/docs/reference/html/: WockyAuthHandler.html  WockyAuthRegistry.html  WockyBareContact.html  WockyC2SPorter.html  WockyCapsCache.html  WockyConnector.html  WockyContact.html  WockyContactFactory.html  WockyDataForm.html  WockyDiscoIdentity.html  WockyJabberAuth.html  WockyJingleContent.html  WockyJingleFactory.html  WockyJingleInfo.html  WockyJingleMediaRtp.html  WockyJingleSession.html  WockyJingleTransportGoogle.html  WockyJingleTransportIceUdp.html  WockyJingleTransportIface.html  WockyJingleTransportRawUdp.html  WockyMetaPorter.html  WockyMuc.html  WockyNodeTree.html  WockyPepService.html  WockyPing.html  WockyPorter.html  WockyPubsubNode.html  WockyPubsubService.html  WockyResourceContact.html  WockyRoster.html  WockySaslAuth.html  WockySaslHandler.html  WockySession.html  WockyStanza.html  WockyTLSConnector.html  WockyTLSHandler.html  WockyXmppConnection.html  WockyXmppReader.html  WockyXmppStanza.html  WockyXmppWriter.html  (+73 more)
lib/ext/wocky/docs/reference/tmpl/: wocky-auth-handler.sgml  wocky-auth-registry-enumtypes.sgml  wocky-auth-registry.sgml  wocky-debug.sgml  (+67 more)
lib/ext/wocky/examples/: Makefile.in
lib/ext/wocky/m4/: Makefile.in
lib/ext/wocky/tests/: Makefile.in
lib/ext/wocky/tests/certs/: ca-0-crl.pem  ca-1-key.pem  ca-2-key.pem  exp-key.pem  new-key.pem  rev-cert.pem  rev-key.pem  ss-cert.pem  ss-key.pem  tls-cert.pem  tls-key.pem  unknown-ca-key.pem  unknown-cert.pem  unknown-key.pem
lib/ext/wocky/tools/: Makefile.in
lib/ext/wocky/wocky/: Makefile.in
lib/gibber/: Makefile.in
lib/loudmouth/: Makefile.in
m4/: Makefile.in
plugins/: Makefile.in
src/: Makefile.in  gabble-connection-glue.h  gabble-connection-manager-glue.h  gabble-connection-manager-signals-marshal.c  gabble-connection-manager-signals-marshal.h  gabble-connection-signals-marshal.c  gabble-connection-signals-marshal.h  gabble-im-channel-glue.h  gabble-im-channel-signals-marshal.h  gabble-media-channel-glue.h  gabble-media-channel-signals-marshal.c  gabble-media-channel-signals-marshal.h  gabble-media-session-enumtypes.c  gabble-media-session-enumtypes.h  gabble-media-session-glue.h  gabble-media-session-signals-marshal.c  gabble-media-session-signals-marshal.h  gabble-media-stream-glue.h  gabble-media-stream-signals-marshal.c  gabble-media-stream-signals-marshal.h  gabble-muc-channel-glue.h  gabble-muc-channel-signals-marshal.c  gabble-muc-channel-signals-marshal.h  gabble-register-signals-marshal.c  gabble-register-signals-marshal.h  gabble-roomlist-channel-glue.h  gabble-roomlist-channel-signals-marshal.h  gabble-roster-channel-glue.h  gabble-roster-channel-signals-marshal.h  gabble.h  group-mixin-signals-marshal.c  group-mixin-signals-marshal.h  properties-mixin-signals-marshal.h  telepathy-errors-enumtypes.c  telepathy-errors-enumtypes.h  text-mixin-signals-marshal.c  text-mixin-signals-marshal.h  tp-channel-factory-iface-signals-marshal.c  tp-channel-factory-iface-signals-marshal.h
tests/: Makefile.in
tests/suppressions/: Makefile.in
tests/twisted/: Makefile.in  config.py
tests/twisted/tools/: Makefile.in
tools/: Makefile.in
(+25 files in other folders)
